@@ -1,5 +1,6 @@
 2010-08-19
- - partial fix on the QTreeView issue, needs further fixing
+ - Connection uses QGraphicsPathItem instead of QGraphicsLineItem
+ - partial fix on the QTreeView issue, needs further fixing: see TODO
  - fixed a drawing issue, where a connection wasn't drawn to the propper center of the parent item. this has something to do with:
     case QGraphicsItem::ItemPositionHasChanged:
     case QGraphicsItem::ItemPositionChange:
